# dots

./: README.md  README.org  install-archlinux  install-userspace
POST_INSTALL/: arch-deploy-post.bash
POST_INSTALL/deploy-cfg/: 10-update-NextDNS-IP.sh  sxlock.c.diff  sxlock.service
config/: .gitignore  screenkey.json  starship.toml
config/Thunar/: uca.xml
config/alacritty/: alacritty.toml  alacritty.yml  themes.yml
config/bspwm/: bspwmrc  eww_fullscreen_fix.bash  update_eww_status.bash
config/dunst/: dunstrc
config/eww/: eww.scss  eww.yuck
config/fish/: config.fish
config/foot/: catppuccin-mocha.ini  foot.ini
config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf  update_eww_status.bash
config/leftwm/: config.ron
config/mpd/: mpd.conf
config/mpv/: .gitignore  input.conf  mpv.conf
config/ncmpcpp/: config
config/nvim/: README.org  init.lua
config/paru/: paru.conf
config/picom/: picom.conf
config/swhkd/: swhkdrc
config/sxhkd/: sxhkdrc
config/tmux/: tmux.conf
config/waybar/: colors.css  config.jsonc  style.css
config/xplr/: img-preview.bash  init.lua
config/yazi/: keymap.toml  yazi.toml
config/zathura/: zathurarc
crates/: .env  .gitignore  Cargo.toml  justfile
crates/wp/: Cargo.toml
crates/wp/src/: main.rs  start.rs  update_db.rs
home/: .alias  .profile  .vimrc  .zshrc
misc/: firefox-policies.json.patch  kernel-args-hardening.conf  kernel-module-blacklist.conf  package-list.bash  package-list.sh
personal/: faa7gk
post-install/: nvidia-fan-control.service  nvidia-fan-control.timer  post-install.bash
(+172 files in other folders)
