[package]
name = "wp"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15"
image = "0.24"
libc = "0.2"
rand = "0.8"
redb = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# async-std = { version = "1.12" }
# sqlx = { version = "0.7", features = [ "runtime-async-std" , "sqlite", "macros"] }
